@@ -3,6 +3,10 @@ X3 ChangeLog
 
 2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
+	* src/opserv.c: Store when alerts were last triggered.
+
+2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
+
 	* x3.conf.example: Added valid_channel_regex.
 
 	* src/chanserv.c: Added valid_channel_regex.
